k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-next-template-service
  labels:
    app: ts-next-template
spec:
  selector:
    app: ts-next-template
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
