k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-next-template-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: '8m'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '30'
spec:
  ingressClassName: nginx
  rules:
    - host: ts-next-template.local
      http:
        paths:
          - path: /datamgr_flow(/.*)?
            pathType: ImplementationSpecific # 前缀匹配
            backend:
              service:
                name: ts-next-template-service
                port:
                  number: 3000
